<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/welcomeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp"
            android:text="@string/welcome_txt"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/welcomeDescTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_desc"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="italic"
            android:typeface="normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btnLgLogin"
            android:textColor="#ffffff" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btnLgFaceLogin"
            android:textColor="#ffffff" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="Sign In"
            android:textColor="#ffffff" />
    </RelativeLayout>

</LinearLayout>