<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_slight"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingTop="4dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#4Daffdd6"
            android:gravity="center_horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_slight" >

                <LinearLayout
                    android:id="@+id/thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/listview_selector_bg_rect"
                    android:padding="3dip" >

                    <ImageView
                        android:id="@+id/ivMainUserPic"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/default_user" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvMainUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/profilePic"
                    android:paddingLeft="14dp"
                    android:paddingRight="10dp"
                    android:text="@string/nameSurname"
                    android:textColor="#fff"
                    android:textSize="22sp" />
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/listBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:gravity="center"
            android:onClick="clickList"
            android:text="@string/btnList"
            android:textColor="#fff" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:gravity="center"
            android:onClick="clickCreate"
            android:text="@string/btnCreate"
            android:textColor="#fff" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:onClick="clickSearch"
            android:text="@string/btnSearch"
            android:textColor="#fff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#4Daffdd6"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:alpha=".85"
                android:background="@drawable/line"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="Up Coming Events"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/lvMainUpcoming"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#4Daffdd6"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#aa0"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>